# invoice-generator

./: Cargo.toml  README.md  invoice.xml
src/: format.rs  invoice.rs  lib.rs  main.rs  test.rs  validation.rs
src/einvoice/: mod.rs
src/invoice/: mod.rs
src/models/: address.rs  buyer.rs  invoice.rs  mod.rs  product.rs  seller.rs
src/pdf/: addresses.rs  cols.rs  context.rs  drawing.rs  embed.rs  fin_summary.rs  generate.rs  header.rs  logo.rs  mod.rs  payment_details.rs  pdfa.rs  product_table.rs  products.rs
src/pdf/layout/: addresses.rs  header.rs  mod.rs  payment_details.rs  products.rs  summary.rs
