[package]
name = "invoice"
version = "0.1.0"
edition = "2024"

[dependencies]
printpdf = { version = "0.8.*", features = ["png", "jpeg"] }
num-format = { version = "0.4.4" }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.9" }
hex = { version = "0.4.3" }
ordered-float = { version = "5.1.0" }
image = { version = "0.25.6", features = ["png", "jpeg"] }

[dev-dependencies]
tempfile = { version = "3.20.0" }
